Update yang banyak brokk

--- a/fiber-optik.html
+++ b/fiber-optik.html
@@ -101,18 +101,146 @@
         </section>
         <!-- end jumbotron -->
 
-        <!-- content -->
-        <div class="comment-box">
-            <div class="comment-header">
-                <div class="comment-info"></div>
-            </div>
-            <div class="materi-content">
-                <h1 class="text-center">Masih Kosong.</h1>
-                <span class="comment-time josefin">10:17 - Rabu, 24 Juli 2024</span>
-            </div>
-        </div>
+<!-- content -->
+<h1 style="text-align: center;">Kenali alat-alat yang digunakan dalam Fiber Optik</h1>
+<div class="comment-box">
+    <div class="comment-header">
+        <div class="comment-info"></div>
+    </div>
+    <div class="materi-content">
+        <img src="./alat-fiber/1593501507877.png" id="fiber-optik">
+        <h1>Fusion Splicer</h1>
+        <p style="text-align: left; margin-top: 2em;">Fusion splicer atau sering dikenal sebagai alat untuk menyambungkan serat optik ini merupakan
+            salah satu alat yang digunakan untuk menyambungkan sebuah core serat optik, dimana serat
+            tersebut terbuat / berbasis kaca, dan mengimplementasikan suatu daya listrik yang telah dirubah
+            menjadi sebuah media sinar berbentuk laser.
+            </p>
+    <p style="text-align: right;" class="comment-time josefin">05:57 - Ahad, 1 September 2024</p>
+    </div>
+</div>
 
-        <!-- end content -->
+<div class="comment-box">
+    <div class="comment-header">
+        <div class="comment-info"></div>
+    </div>
+    <div class="materi-content">
+        <img src="./alat-fiber/stripper.webp" id="fiber-optik">
+        <h1>Stripper Atau Miller</h1>
+        <p style="text-align: left; margin-top: 2em;">Sama seperti kabel - kabel yang lain, salah satunya seperti kabel coaxial dan UTP, kabel fiber optic
+            juga memerlukan alat ini. Alat ini berfungsi sebagai media untuk memotong dan mengupas kulit
+            dan daging kabel.            
+            </p>
+    <p style="text-align: right;" class="comment-time josefin">05:57 - Ahad, 1 September 2024</p>
+    </div>
+</div>
+
+<div class="comment-box">
+    <div class="comment-header">
+        <div class="comment-info"></div>
+    </div>
+    <div class="materi-content">
+        <img src="./alat-fiber/opm.png" id="fiber-optik">
+        <h1>Optical Power Meter</h1>
+        <p style="text-align: left; margin-top: 2em;">Alat yang satu ini memiliki fungsi untuk mengetahui seberapa
+            kuat daya dari signal cahaya yang sudah masuk.            
+            </p>
+    <p style="text-align: right;" class="comment-time josefin">05:57 - Ahad, 1 September 2024</p>
+    </div>
+</div>
+
+<div class="comment-box">
+    <div class="comment-header">
+        <div class="comment-info"></div>
+    </div>
+    <div class="materi-content">
+        <img src="./alat-fiber/otdr.png " id="fiber-optik">
+        <h1>Optical Time Domain
+            Reflectometer (OTDR)</h1>
+        <p style="text-align: left; margin-top: 2em;">OTDR merupakan salah satu alat yang digunakan untuk mendeteksi komunitas atau himpunan
+            suatu kabel serat ptik dalam jarak tempuh tertentu, sehingga dengan adanya alat ini diharapkan
+            mampu menghasilkan jarak dari dua sisi yang merupakan ukuran gangguan yang terjadi.            
+            </p>
+    <p style="text-align: right;" class="comment-time josefin">05:57 - Ahad, 1 September 2024</p>
+    </div>
+</div>
+
+<div class="comment-box">
+    <div class="comment-header">
+        <div class="comment-info"></div>
+    </div>
+    <div class="materi-content">
+        <img src="./alat-fiber/Light-Source-min.png" id="fiber-optik">
+        <h1>Fiber Optic Light Source</h1>
+        <p style="text-align: left; margin-top: 2em;">Pada dasarnya, alat yang satu ini mempunyai fungsi untuk memberikan suatu signal untuk jalur
+            yang akan dilaluinya, misalnya untuk mengukur suatu redaman jalur atu end to end dimana Light
+            Source ini akan berfungsi sebagai media yang memberi signal-nya.                      
+            </p>
+    <p style="text-align: right;" class="comment-time josefin">05:57 - Ahad, 1 September 2024</p>
+    </div>
+</div>
+
+<div class="comment-box">
+    <div class="comment-header">
+        <div class="comment-info"></div>
+    </div>
+    <div class="materi-content">
+        <img src="./alat-fiber/fi720-opticalfiberidentifiers.png" id="fiber-optik">
+        <h1>Optical Fiber Identifier</h1>
+        <p style="text-align: left; margin-top: 2em;">Alat yang satu ini memiliki fungsi untuk mengetahui arah signal
+            dengan penunjuk arah dan besar daya yang di laluinya.                     
+            </p>
+    <p style="text-align: right;" class="comment-time josefin">05:57 - Ahad, 1 September 2024</p>
+    </div>
+</div>
+
+<div class="comment-box">
+    <div class="comment-header">
+        <div class="comment-info"></div>
+    </div>
+    <div class="materi-content">
+        <img src="./alat-fiber/visual-fault.webp" id="fiber-optik">
+        <h1>Visual Fault Locator</h1>
+        <p style="text-align: left; margin-top: 2em;">Alat ini sering disebut juga Laser fiber optic atau senter fiber optic. Fungsinya untuk melakukan
+            pengetesan pada core fiber optic. Laser akan mengikuti serat Optik pada Kabel Fiber Optik dari
+            POP Sampai Ke User (end to end) , bila core tidak bermasalah laser akan sampai pada titik tujuan.                    
+            </p>
+    <p style="text-align: right;" class="comment-time josefin">05:57 - Ahad, 1 September 2024</p>
+    </div>
+</div>
+
+<div class="comment-box">
+    <div class="comment-header">
+        <div class="comment-info"></div>
+    </div>
+    <div class="materi-content">
+        <img src="./alat-fiber/bit-rate.png" id="fiber-optik">
+        <h1>Bit Error Rate Test</h1>
+        <p style="text-align: left; margin-top: 2em;">Alat ini berfungsi sebagai pengecek koneksi jaringan TDM (Time Divisio
+            Multipleksi) yang mana jaringan TDM aplikasinya yaitu layanan Clear Channel
+            yang sedang coba di uraikan penulis.                    
+            </p>
+    <p style="text-align: right;" class="comment-time josefin">05:57 - Ahad, 1 September 2024</p>
+    </div>
+</div>
+
+<div class="comment-box">
+    <div class="comment-header">
+        <div class="comment-info"></div>
+    </div>
+    <div class="materi-content">
+        <img src="./alat-fiber/fo-adapter.jpg" id="fiber-optik">
+        <h1>Fiber Optic Adapter</h1>
+        <p style="text-align: left; margin-top: 2em;">Fiber Optik Adapter merupakan suatu komponen yang
+            digunakan untuk melakukan penyambungan/menghubungkan
+            kabel fiber optik satu dengan yang lain. jika penyambungan
+            dilakukan terhadap kabel fiber optik yang memiliki konektor
+            berbeda maka fiber optik adapter disebut fiber optik adapter
+            hibrid atau Special Adapter.                    
+            </p>
+    <p style="text-align: right;" class="comment-time josefin">05:57 - Ahad, 1 September 2024</p>
+    </div>
+</div>
+<!-- end content -->
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
