--- a/sysadmin.html
+++ b/sysadmin.html
@@ -108,14 +108,152 @@
                 <div class="comment-info"></div>
             </div>
             <div class="materi-content">
-                <p style="text-align: left;">Sebelum lanjut ke cara instalasinya, kita harus mengenali apa itu Virtualbox dan Debian</p>
                 <img src="./materiIcon/Virtualbox_logo.png" id="vdebianLogo" alt="">
                 <img src="./materiIcon/Debian_logo.png" id="vdebianLogo" alt="">
-                <p style="text-align: left; margin-top: 1em;">VirtualBox adalah perangkat lunak virtualisasi yang memungkinkan menjalankan berbagai sistem operasi di satu komputer,<br>sedangkan Debian adalah distribusi Linux yang dikenal karena stabilitas dan keandalannya, khususnya sebagai sistem operasi server.</p>
-            <p style="text-align: right;" class="comment-time josefin">11::01 - Kamis, 15 Agustus 2024</p>
+                <p style="text-align: left; margin-top: 2em;">Sebelum lanjut ke cara instalasinya, kita harus mengenali apa itu Virtualbox dan Debian.</p>
+                <p style="text-align: left;">VirtualBox adalah perangkat lunak virtualisasi yang memungkinkan menjalankan berbagai sistem operasi di satu komputer,<br>sedangkan Debian adalah distribusi Linux yang dikenal karena stabilitas dan keandalannya, khususnya sebagai sistem operasi server.</p>
+            <p style="text-align: right;" class="comment-time josefin">11:01 - Kamis, 15 Agustus 2024</p>
             </div>
         </div>
 
+        <div class="comment-box">
+            <div class="comment-header">
+                <div class="comment-info"></div>
+            </div>
+            <div class="materi-content">
+                <p style="text-align: left;">Bahan bahan yang harus kalian download :</p>
+                <p style="text-align: left; margin-top: 1em;">- Mendownload file ISO debian.</p>
+                <a href="https://archive.org/details/debian-9.4.0-amd64-CD">Klik link disini untuk mendownload file ISO yang saya gunakan.</a>
+                <p style="text-align: left; margin-top: 1em;">- Mendownload aplikasi Oracle VirtualBox</p>
+                <a href="https://www.virtualbox.org/wiki/Downloads">Klik link disini untuk mendownload software virtual box yang saya gunakan.</a>
+            <p style="text-align: right; margin-top: 1em;" class="comment-time josefin">10:57 - Jum'at, 30 Agustus 2024</p>
+            </div>
+        </div>
+
+        <div class="comment-box">
+            <div class="comment-header">
+                <div class="comment-info"></div>
+            </div>
+            <div class="materi-content">
+                <p style="text-align: left;">Langkah langkah Instalasi :</p>
+                <p style="text-align: left; margin-top: 1em;">1. Buka aplikasi VirtualBox, lalu klik [New]<br><br>2. Lalu beri nama untuk virtual yang akan kita buat dengan type Debian dan version
+                    64bit, karena saya menggunakan Debian 9 64bit [Next]<br><br>3. Tentukan memory yang akan digunakan virtual, disini saya memberikan 4GB atau
+                    4096 MB. Sesuaikan dengan memory di komputer masing-masing lalu [Next]<br><br>4. Lalu pada bagian Create a Virtual Harddisk Now sesuaikan dengan kebutuhan kalian. Disini karena hanya simulasi instalasi saja, saya akan menggunakan penyimpanan sebesar 20 GB saja.<br><br>5. Pada bagian "Summary", informasi yang tertulis di tab itu adalah informasi mengenai virtual mesin yang kalian buat. Kalian bisa lihat bahwa memory disana terdeteksi 4 GB, storage 20 GB, dan jumlah prosesor yang kalian gunakan.<br><br>6. Setelah itu, klik [Finish] untuk menyelesaikan reviewnya.<br><br>7. Setelah selesai, kita sekarang lanjut klik [Start]<br><br>8. Klik choose a virtual optical disk file<br><br>9. Cari file ISO yang kalian download. Sebagai contoh "debian-9.4.0-DVD-1.iso" dan pilih [Open]<br><br>10. Lakukan restart mesin virtual dengan kombinasi CTRL kanan + R dan secara otomatis mesin langsung restart.<br><br>11. Setelah Debian 9 kita nyalakan akan tampil menu seperti dibawah, dalam
+                    tutorial ini saya akan install menggunakan mode text, pilih Install dengan cara
+                    tekan [Enter].<br><br>12. Pilih Bahasa Indonesia tekan [Enter].<br><br>13. Lanjutkan instalasi dengan Bahasa Indonesia yang di pilih lalu klik Ya<br><br>14. Pilih lokasinya Indonesia [enter]<br><br>15. Pilih keyboard American English tekan [Enter].<br><br>16. Untuk konfigurasi ip address, disini saya buatkan 192.168.100.1 [lanjutkan]<br><br>17. Untuk konfigurasi hostname saya buat nama KitaBersama, karena kita
+                    akan konfigurasi hostname setelah instalasi selesai.<br><br>18. Masukkan password untuk user root, saya buat simple aja biar mudah
+                    nantinya seperti 123 sampai konfirmasi 123.<br><br>19. Saya buat user baru dengan nama seperti kitabersama, boleh gunakan nama
+                    lain. Lalu buat Password/kata sandi<br><br>20. Untuk time zone silakan dipilih sesuai lokasi tinggal<br><br>21. Nah kita masuk ke bagian terpenting dalam instalasi kali ini, yaitu
+pembagian partisi hardisk. pilih Terpandu - gunakan seluruh harddisk dipartisi debian<br><br>22.Selanjutnya akan ditampilkan pilihan tentang konfigurasi partisi yang akan dilakukan.
+Pilihlah jenis hard disk yang akan dipartisi secara manual. Di sini kita pilih [SCSI3
+(0,0,0) (sda) – 20 GB ATA VBOX HARDDISK], walaupun mungkin pada komputer
+anda ukuran dan jenis hard disk bisa saja berbeda. Lalu tekan Enter.<br><br>23. Selanjutnya kita akan ditanya bagimana skema partisi untuk instalannya. Karena saya
+juga belum memahami skema partisinya kita Pilih semua berkas di satu partisi
+(disarankan untuk pemula)<br><br>24. Setalah kita yakin dengan pembagian pastisinya pilih selesai mempartisi dan
+tulis perubahan-perubahannya ke harddisk [Enter] di jendela selanjutnya pilih Ya<br><br>25. Sistem akan meminta untuk men-scan DVD Debian lainnya. Jika ada ISO DVD2, DVD3, dll., mount dari VirtualBox terlebih dahulu. Ini menambahkan repositori DVD ke file list Debian. Untuk saat ini, pilih [Tidak] dan tekan Enter.<br><br>26. Selanjutnya, instalasi akan menanyakan apakah Anda ingin menginstal paket tambahan melalui jaringan internet (network mirror). Karena PC Anda tidak terhubung ke internet, pilih [Tidak] dan tekan Enter.<br><br>27. Kemudian, proses instalasi meminta kesediaan kita untuk berpartisipasi dalam
+survey paket Debian. Kita tidak perlu berpartisipasi, maka pilihlah [Tidak], lalu tekan
+Enter.<br><br>28. Pilih "Standard system utilities" dari daftar aplikasi. Gunakan SPASI untuk menghilangkan tanda * pada paket yang tidak diinginkan. disini saya mau menggunakan tampilan CLI. jadi yang perlu dilakukan adalah menghapus tanda * pada opsi "Debian desktop environment" lalu tekan [Enter].<br><br>29. Pada jendela berikutnya, proses instalasi akan meminta untuk menginstal GRUB boot loader pada Master Boot Record. GRUB adalah program yang mem-boot sistem operasi dari hard disk atau media lainnya. Pilih [Ya] dan tekan Enter untuk menginstal GRUB.<br><br>30. Lalu pilih hardisk mana yang nanti akan di taruh GRUB loader. Saya pilih /dev/sda lalu
+[Enter]<br><br>31. Setelah selesai akan diinformasikan bahwa proses instalasi telah selesai. Pilih
+[lajutkan] lalu [Enter].Debian akan secara otomatis Reboot.
+</p>
+
+<h1 style="margin-top: 2em; margin-bottom: 2em;">Finish! Kamu telah menyelesaikan tahap instalasi debian pada virtualbox!</h1>
+            <p style="text-align: right;" class="comment-time josefin">10:57 - Jum'at, 30 Agustus 2024</p>
+            </div>
+        </div>
+
+        <!-- this second content -->
+        <div class="comment-box" style="margin-bottom: 3em;">
+            <div class="comment-header">
+                <div class="comment-info">
+                </div>
+            </div>
+            <div class="comment-content">
+                <h1 style="margin-bottom: 1em; font-weight: 800; font-size: 30px;" class="nunito">Tutorial Instalasi, Konfigurasi, dan Konektivitas pada Debian di Oracle VirtualBox!</h1>
+                <div class="content-wrapper">
+                    <div class="video-container">
+                        <iframe width="280" height="157" src="https://www.youtube.com/embed/QyDUW7o37Nw?si=w4PhuWKFFipFZ3yL" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="text-content" style="color: black; text-align: left;">
+                        <p>Setelah membaca seluruh langkah-langkah instalasi diatas, kamu mungkin masih tidak mengerti. Maka dari itu, kamu mungkin butuh penjelasan sembari praktik! Simak video ini!</p>
+                        <p>
+                            Saya dan teman-teman saya yang ada di video ini membahas tentang bagaimana cara instalasi debian, konfigurasi routing static, dan pengujian konektivitas antara debian dengan client! Semoga dapat membantu teman-teman yang sedang mencoba menginstal Debian!
+                        </p>
+                        <span class="comment-time josefin">10:48 - Jum'at, 30 Agustus 2024</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- second content -->
+        <!-- end content -->
+         
+        <!-- content -->
+        <h1 style="text-align: center;">Cara melakukan remote jarak jauh menggunakan aplikasi PuTTY!</h1>
+        <div class="comment-box">
+            <div class="comment-header">
+                <div class="comment-info"></div>
+            </div>
+            <div class="materi-content">
+                <img src="./materiIcon/PuTTY_Icon.svg.png" id="vdebianLogo" style="align-items: center;" alt="">
+                <p style="text-align: left; margin-top: 2em;">Sebelum lanjut ke cara instalasinya, kita harus mengenali terlebih dahulu apa itu PuTTY?</p>
+                <p style="text-align: left;">PuTTY adalah aplikasi klien SSH yang memungkinkan akses remote ke server dengan protokol aman seperti SSH, Telnet, dan rlogin, dan tersedia untuk Windows serta platform lain.</p>
+            <p style="text-align: right;" class="comment-time josefin">05:57 - Ahad, 1 September 2024</p>
+            </div>
+        </div>
+
+        <div class="comment-box">
+            <div class="comment-header">
+                <div class="comment-info"></div>
+            </div>
+            <div class="materi-content">
+                <p style="text-align: left;">Bahan bahan yang harus kalian download :</p>
+                <p style="text-align: left; margin-top: 1em;">- Mendownload aplikasi PuTTY</p>
+                <a href="https://www.chiark.greenend.org.uk/~sgtatham/putty/latest.html">Klik link disini untuk mendownload aplikasi SSH yang saya gunakan.</a>
+            <p style="text-align: right; margin-top: 1em;" class="comment-time josefin">06:00 - Ahad, 1 September 2024</p>
+            </div>
+        </div>
+
+        <div class="comment-box">
+            <div class="comment-header">
+                <div class="comment-info"></div>
+            </div>
+            <div class="materi-content">
+                <p style="text-align: left;">Langkah langkah untuk Remote Debian menggunakan PuTTY :</p>
+                <p style="text-align: left; margin-top: 1em;">1. Lakukan cek konektivitas terhadap kedua device (debian dan device client).<br><br>2. Jika keduanya masih bisa saling reply, maka kita bisa lanjut ke cara selanjutnya.<br><br>3. Masukkan file ISO kedalam Optical Drive atau jika kalian melakukannya di laptop asli, kalian bisa pasang kembali flashdisk yang berisikan bootable ke laptop/komputernya.<br><br>4. masukan perintah di terminal debian "apt-cdrom add" dan enter.<br><br>5. Pada bagian ini, kalian tunggu sampai terbaca linux debian yang kalian masukkan tadi. dan jika sudah terdeteksi, kita bisa lanjut ke tahap selanjutnya<br><br>6. Kita akan lakukan instalasi aplikasi Openssh-server. Jadi, kita perlu memasukan perintah instal "apt install openssh-server" lalu enter.<br><br>7. Setelah itu kalian tekan tombol y untuk konfirmasi apakah ingin di install atau tidak. dan proses instalasi akan berlangsung.<br><br>8. Setelah aplikasi openssh sudah berhasil di install, yang perlu di lakukan adalah melakukan konfigurasi terhadap ssh yang baru di instal.<br><br>9. Tahap selanjutnya, masukan perintah "nano /etc/ssh/sshd_config".<br><br>10. Didalam sana, yang perlu di rubah adalah bagian port. Hapus tanda pagar di depan teks port dan berikan port yang kalian mau. sebagai contoh dari 22 saya rubah menjadi 2024.<br><br>11. Lalu scroll kebawah dengan tombol anak panah kebawah dan cari "#PermitRootLogin prohibit-password".<br><br>12. Jika kalian ingin masuk kedalam user root lewat ssh, kalian hapus tanda # dan ubah tulisan "prohibit-password" menjadi "yes".<br><br>13. Setelah itu kalian bisa lakukan save file confignya dengan cara tekan tombol dengan kombinasi CTRL + X, tekan y, dan ENTER. Maka, dengan begitu file ssh sudah selesai kita konfigurasi.<br><br>14. Setelah tahap tadi, kita harus lakukan restart ssh service terlebih dahulu agar konfigurasi yang kita lakukan tadi langsung diterapkan sistem. dengan memasukkan perintah "/etc/init.d/ssh restart" atau "systemctl ssh restart".<br><br>15. Buka aplikasi PuTTY dan masukan hostname beserta portnya. Untuk hostname saya masukan 2.2.2.1 (IP ADDRESS DEBIAN) dan port 2024.<br><br>16. Tekan "Open" dan akan terbuka tab baru dengan bertuliskan "PuTTY Security Alert" disini kalian tekan "Accept".<br><br>17. Kamu bisa coba untuk masuk kedalam user root dan user biasa di PuTTY.</p>
+                <p style="margin-top: 2em; margin-bottom: 2em; font-weight: 700;">Bagaimana cara membuktikannya jika PuTTY berhasil terhubung ke Debian yang saya jalankan?<br><br>Kalian bisa coba untuk melakukan shutdown atau reboot dengan perintah yang sama seperti di debian.</p>
+
+<h1 style="margin-top: 2em; margin-bottom: 2em;">Finish! Kamu telah menyelesaikan tahap remote debian pada PuTTY!</h1>
+            <p style="text-align: right;" class="comment-time josefin">06:26 - Ahad, 1 September 2024</p>
+            </div>
+        </div>
+
+        <!-- this second content -->
+        <div class="comment-box" style="margin-bottom: 3em;">
+            <div class="comment-header">
+                <div class="comment-info">
+                </div>
+            </div>
+            <div class="comment-content">
+                <h1 style="margin-bottom: 1em; font-weight: 800; font-size: 30px;" class="nunito">Tutorial melakukan remote jarak jauh (SSH) menggunakan aplikasi PuTTY!</h1>
+                <div class="content-wrapper">
+                    <div class="video-container">
+                        <iframe width="280" height="157" src="https://www.youtube.com/embed/HccbVG4pRPg" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="text-content" style="color: black; text-align: left;">
+                        <p>Setelah membaca seluruh langkah-langkah instalasi diatas, kamu mungkin masih tidak mengerti. Maka dari itu, kamu mungkin butuh penjelasan sembari praktik! Simak video ini!</p>
+                        <p>
+                            Di dalam video ini membahas seluruh langkah langkah yang saya sebutkan seperti teks diatas.
+                        </p>
+                        <span class="comment-time josefin">06.30 - Ahad, 1 September 2024</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- second content -->
         <!-- end content -->
 
 
