--- a/video.html
+++ b/video.html
@@ -162,7 +162,50 @@
             </div>
         </div>
         <!-- second content -->
+
+        <div class="comment-box" style="margin-bottom: 3em;">
+            <div class="comment-header">
+                <div class="comment-info">
+                </div>
+            </div>
+            <div class="comment-content">
+                <h1 style="margin-bottom: 1em; font-weight: 800; font-size: 30px;" class="nunito">Tutorial Instalasi, Konfigurasi, dan Konektivitas pada Debian di Oracle VirtualBox!</h1>
+                <div class="content-wrapper">
+                    <div class="video-container">
+                        <iframe width="280" height="157" src="https://www.youtube.com/embed/QyDUW7o37Nw?si=w4PhuWKFFipFZ3yL" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="text-content" style="color: black; text-align: left;">
+                        <p>Di video ini saya dan teman-teman membahas tentang cara instalasi, konfigurasi routing static, dan sampai melakukan pengujian konektivitas antar kedua device secara bersamaan!<br>Cocok untuk pemula yang ingin belajar cara menginstall debian!</p>
+                        <span class="comment-time josefin">10:48 - Jum'at, 30 Agustus 2024</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="comment-box" style="margin-bottom: 3em;">
+            <div class="comment-header">
+                <div class="comment-info">
+                </div>
+            </div>
+            <div class="comment-content">
+                <h1 style="margin-bottom: 1em; font-weight: 800; font-size: 30px;" class="nunito">Tutorial melakukan remote jarak jauh (SSH) menggunakan aplikasi PuTTY!</h1>
+                <div class="content-wrapper">
+                    <div class="video-container">
+                        <iframe width="280" height="157" src="https://www.youtube.com/embed/HccbVG4pRPg" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="text-content" style="color: black; text-align: left;">
+                        <p>Saya dan teman-teman saya di video ini membahas tentang bagaimana caranya melakukan remote jarak jauh menggunakan aplikasi ssh dengan PuTTY!</p>
+                        <span class="comment-time josefin">06.30 - Ahad, 1 September 2024</span>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- end content -->
+        
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
