add something new on album.html

--- a/album.html
+++ b/album.html
@@ -129,6 +129,7 @@
     <img src="./thumbnail/masaSMP-thumb.jpeg" data-full-src="./album/masaSMP.jpeg" data-description="Saya bersama teman-teman smp saya ..." onclick="showPreview(this)">
     <img src="./thumbnail/photo9-thumb.jpeg" data-full-src="./album/photo9.jpeg" data-description="Saya dan teman teman saya sedang mengerjakan proposal untuk tugas PKK kami di RPS TJKT!" onclick="showPreview(this)">
     <img src="./thumbnail/kihajarstem-thumb.jpg" data-full-src="./album/kihajarstem-photo.jpg" data-description="Foto ini, diambil setelah kami mengerjakan soal Kihajar Stem!" onclick="showPreview(this)">
+    <img src="./thumbnail/thumbnailPerbanas.jpeg" data-full-src="./album/perbanasmoment.jpeg" data-description="Lomba kali ini memberikan banyak pengalaman untukku. Terimakasih teman-teman yang sudah berjuang bersama denganku." onclick="showPreview(this)">
 </div>
 
 <!-- preview image -->
