change a simple settings

--- a/video.html
+++ b/video.html
@@ -208,7 +208,7 @@
                 </div>
             </div>
             <div class="comment-content">
-                <h1 style="margin-bottom: 1em; font-weight: 800; font-size: 30px;" class="nunito">Tutorial Instalasi, Konfigurasi, dan Konektivitas pada Debian di Oracle VirtualBox!</h1>
+                <h1 style="margin-bottom: 1em; font-weight: 800; font-size: 30px;" class="nunito">Instalasi, Konfigurasi, dan Konektivitas pada Debian di Oracle VirtualBox!</h1>
                 <div class="content-wrapper">
                     <div class="video-container">
                         <iframe width="280" height="157" src="https://www.youtube.com/embed/QyDUW7o37Nw?si=w4PhuWKFFipFZ3yL" frameborder="0"
@@ -229,7 +229,7 @@
                 </div>
             </div>
             <div class="comment-content">
-                <h1 style="margin-bottom: 1em; font-weight: 800; font-size: 30px;" class="nunito">Tutorial melakukan remote jarak jauh (SSH) menggunakan aplikasi PuTTY!</h1>
+                <h1 style="margin-bottom: 1em; font-weight: 800; font-size: 30px;" class="nunito">Cara melakukan remote jarak jauh (SSH) menggunakan aplikasi PuTTY!</h1>
                 <div class="content-wrapper">
                     <div class="video-container">
                         <iframe width="280" height="157" src="https://www.youtube.com/embed/HccbVG4pRPg" frameborder="0"
