--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     
     <!-- mengaktifkan mode maintenance -->
-    <!-- <meta http-equiv="refresh" content="0;url=maintenance.html"> -->
+    <meta http-equiv="refresh" content="0;url=maintenance.html">
     <!-- mengaktifkan mode maintenance -->
 
 
@@ -269,7 +269,7 @@
                         yang sudah tau
                         cara
                         basic dari melakukan hal itu. Dan aku lebih suka belajar sembari berdiskusi bersama teman teman
-                        tentang cara mmenyelesaikan masalah tersebut.
+                        tentang cara menyelesaikan masalah tersebut.
                         Kalau lagi belajar, kadang aku suka sambil dengerin lagu juga sih. Karena lagu dapat membuatku
                         lebih
                         tenang dan nyaman dalam proses belajar.
