--- a/mikrotik.html
+++ b/mikrotik.html
@@ -141,13 +141,27 @@
         <!-- end jumbotron -->
 
         <!-- content -->
-        <div class="comment-box">
+        <div class="comment-box" style="margin-bottom: 3em;">
             <div class="comment-header">
-                <div class="comment-info"></div>
+                <div class="comment-info">
+                </div>
             </div>
-            <div class="materi-content">
-                <h1 class="text-center">Masih Kosong.</h1>
-                <span class="comment-time josefin">10:24 - Rabu, 24 Juli 2024</span>
+            <div class="comment-content">
+                <h1 style="margin-bottom: 1em; font-weight: 800; font-size: 30px;" class="nunito">Tutorial melakukan remote jarak jauh (SSH) menggunakan aplikasi PuTTY!</h1>
+                <div class="content-wrapper">
+                    <div class="video-container">
+                        <iframe width="280" height="157" src="https://www.youtube.com/embed/HccbVG4pRPg" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="text-content" style="color: black; text-align: left;">
+                        <p>Setelah membaca seluruh langkah-langkah instalasi diatas, kamu mungkin masih tidak mengerti. Maka dari itu, kamu mungkin butuh penjelasan sembari praktik! Simak video ini!</p>
+                        <p>
+                            Di dalam video ini membahas seluruh langkah langkah yang saya sebutkan seperti teks diatas.
+                        </p>
+                        <span class="comment-time josefin">06.30 - Ahad, 1 September 2024</span>
+                    </div>
+                </div>
             </div>
         </div>
 
