--- a/mikrotik.html
+++ b/mikrotik.html
@@ -146,8 +146,8 @@
                 <div class="comment-info"></div>
             </div>
             <div class="materi-content">
-            <h1>Apa itu mikrotik?</h1>
-            <p>Mikrotik adalah sistem operasi dan perangkat keras yang digunakan untuk mengelola jaringan komputer. Mikrotik dapat digunakan sebagai router, firewall, manajemen bandwidth, hotspot gateway, dan VPN.</p>
+            <h1 style="text-align: left;">Apa itu mikrotik?</h1>
+            <p style="text-align: left;">Mikrotik adalah sistem operasi dan perangkat keras yang digunakan untuk mengelola jaringan komputer. Mikrotik dapat digunakan sebagai router, firewall, manajemen bandwidth, hotspot gateway, dan VPN.</p>
             <p>Source : google.com</p>
             <p style="text-align: right;" class="comment-time josefin">08:55 - Sabtu, 14 September 2024</p>
             </div>
