added materi on mikrotik page

--- a/mikrotik.html
+++ b/mikrotik.html
@@ -141,18 +141,56 @@
         <!-- end jumbotron -->
 
         <!-- content -->
+         <!-- pengenalan mikrotik -->
         <div class="comment-box">
             <div class="comment-header">
                 <div class="comment-info"></div>
             </div>
             <div class="materi-content">
-            <h1 style="text-align: left;">Apa itu mikrotik?</h1>
-            <p style="text-align: left;">Mikrotik adalah sistem operasi dan perangkat keras yang digunakan untuk mengelola jaringan komputer. Mikrotik dapat digunakan sebagai router, firewall, manajemen bandwidth, hotspot gateway, dan VPN.</p>
-            <p>Source : google.com</p>
-            <p style="text-align: right;" class="comment-time josefin">08:55 - Sabtu, 14 September 2024</p>
+                <h1 style="text-align: left;">Apa itu mikrotik?</h1>
+                <p>Mikrotik adalah perusahaan yang mengembangkan perangkat keras dan sistem operasi untuk jaringan komputer. Mikrotik juga bisa merujuk pada sistem operasi jaringan berbasis perangkat lunak (software) yang memungkinkan komputer berfungsi sebagai router.</p>
+                <p class="comment-time josefin">Source : Google Gemini</p>
+            <p style="text-align: right;" class="comment-time josefin">09:19 - Sabtu, 14 September 2024</p>
             </div>
         </div>
 
+        <!-- bagian kegunaan mikrotik -->
+        <div class="comment-box"> 
+            <div class="comment-header">
+                <div class="comment-info"></div>
+            </div>
+            <div class="materi-content">
+                <h1 style="text-align: left;">Apa itu mikrotik?</h1>
+                <p>Membangun sistem administrasi jaringan
+                    Mikrotik dapat membantu membangun sistem administrasi jaringan yang efisien dan efektif. 
+                    Mengatur lalu lintas data<br><br>
+                    Mikrotik dapat mengatur aliran data antar perangkat yang terhubung ke jaringan. 
+                    Mengelola akses konten<br><br>
+                    Mikrotik dapat mengelola konten dari internet yang dapat diakses oleh client. 
+                    Memblokir situs<br><br>
+                    Mikrotik dapat memblokir situs-situs yang mengandung konten terlarang, seperti pornografi, dengan menggunakan proxy. 
+                    Berperan sebagai Access Point<br><br>
+                    Mikrotik dapat berperan sebagai Access Point dalam jaringan Wi-Fi, sehingga mendukung konektivitas nirkabel di berbagai lokasi publik. 
+                    Membuat PPPoE server<br><br>
+                    Mikrotik dapat digunakan untuk membuat PPPoE server.<br><br> 
+                    </p>
+                <p class="comment-time josefin">Source : Google Gemini</p>
+            <p style="text-align: right;" class="comment-time josefin">09:23 - Sabtu, 14 September 2024</p>
+            </div>
+        </div>
+
+        <!-- apa itu routeros -->
+        <div class="comment-box">
+            <div class="comment-header">
+                <div class="comment-info"></div>
+            </div>
+            <div class="materi-content">
+                <h1 style="text-align: left;">Lalu, apa itu RouterOS?</h1>
+                <p>MikroTik RouterOS merupakan salah satu solusi untuk membuat router internet dan intranet yang handal, tangguh serta lengkap dengan filtur-filtur selayaknya router yang sangat membantu bagi ISP, kantor dan perusahaan-perusahaan yang ingin bergabung dengan Internet.</p>
+                <p class="comment-time josefin">Source : yesjogja.com | Yogya Executive School</p>
+            <p style="text-align: right;" class="comment-time josefin">14:24 - Selasa, 6 Agustus 2024</p>
+            </div>
+        </div>
         <!-- end content -->
 
 
