added materi on mikrotik page

--- a/mikrotik.html
+++ b/mikrotik.html
@@ -148,8 +148,8 @@
             </div>
             <div class="materi-content">
                 <h1 style="text-align: left;">Apa itu mikrotik?</h1>
-                <p>Mikrotik adalah perusahaan yang mengembangkan perangkat keras dan sistem operasi untuk jaringan komputer. Mikrotik juga bisa merujuk pada sistem operasi jaringan berbasis perangkat lunak (software) yang memungkinkan komputer berfungsi sebagai router.</p>
-                <p class="comment-time josefin">Source : Google Gemini</p>
+                <p style="text-align: left;">Mikrotik adalah perusahaan yang mengembangkan perangkat keras dan sistem operasi untuk jaringan komputer. Mikrotik juga bisa merujuk pada sistem operasi jaringan berbasis perangkat lunak (software) yang memungkinkan komputer berfungsi sebagai router.</p>
+                <p style="text-align: left;" class="comment-time josefin">Source : Google Gemini</p>
             <p style="text-align: right;" class="comment-time josefin">09:19 - Sabtu, 14 September 2024</p>
             </div>
         </div>
@@ -160,21 +160,20 @@
                 <div class="comment-info"></div>
             </div>
             <div class="materi-content">
-                <h1 style="text-align: left;">Apa itu mikrotik?</h1>
-                <p>Membangun sistem administrasi jaringan
-                    Mikrotik dapat membantu membangun sistem administrasi jaringan yang efisien dan efektif. 
-                    Mengatur lalu lintas data<br><br>
-                    Mikrotik dapat mengatur aliran data antar perangkat yang terhubung ke jaringan. 
-                    Mengelola akses konten<br><br>
-                    Mikrotik dapat mengelola konten dari internet yang dapat diakses oleh client. 
-                    Memblokir situs<br><br>
-                    Mikrotik dapat memblokir situs-situs yang mengandung konten terlarang, seperti pornografi, dengan menggunakan proxy. 
-                    Berperan sebagai Access Point<br><br>
-                    Mikrotik dapat berperan sebagai Access Point dalam jaringan Wi-Fi, sehingga mendukung konektivitas nirkabel di berbagai lokasi publik. 
-                    Membuat PPPoE server<br><br>
-                    Mikrotik dapat digunakan untuk membuat PPPoE server.<br><br> 
+                <h1 style="text-align: left;">Apa saja kegunaan Mikrotik itu?</h1>
+                <p style="text-align: left;">1. Mikrotik dapat membantu membangun sistem administrasi jaringan yang efisien dan efektif. 
+                    Mengatur lalu lintas data<br>
+                    2. Mikrotik dapat mengatur aliran data antar perangkat yang terhubung ke jaringan. 
+                    Mengelola akses konten<br>
+                    3. Mikrotik dapat mengelola konten dari internet yang dapat diakses oleh client. 
+                    Memblokir situs<br>
+                    4. Mikrotik dapat memblokir situs-situs yang mengandung konten terlarang, seperti pornografi, dengan menggunakan proxy. 
+                    Berperan sebagai Access Point<br>
+                    5. Mikrotik dapat berperan sebagai Access Point dalam jaringan Wi-Fi, sehingga mendukung konektivitas nirkabel di berbagai lokasi publik. 
+                    Membuat PPPoE server<br>
+                    6. Mikrotik dapat digunakan untuk membuat PPPoE server.<br>
                     </p>
-                <p class="comment-time josefin">Source : Google Gemini</p>
+                <p class="comment-time josefin" style="text-align: left;">Source : Google Gemini</p>
             <p style="text-align: right;" class="comment-time josefin">09:23 - Sabtu, 14 September 2024</p>
             </div>
         </div>
