--- a/mikrotik.html
+++ b/mikrotik.html
@@ -141,6 +141,8 @@
         <!-- end jumbotron -->
 
         <!-- content -->
+
+        <h1>Pengenalan Tentang Mikrotik dan RouterOS</h1>
          <!-- pengenalan mikrotik -->
         <div class="comment-box">
             <div class="comment-header">
@@ -185,8 +187,8 @@
             </div>
             <div class="materi-content">
                 <h1 style="text-align: left;">Lalu, apa itu RouterOS?</h1>
-                <p>MikroTik RouterOS merupakan salah satu solusi untuk membuat router internet dan intranet yang handal, tangguh serta lengkap dengan filtur-filtur selayaknya router yang sangat membantu bagi ISP, kantor dan perusahaan-perusahaan yang ingin bergabung dengan Internet.</p>
-                <p class="comment-time josefin">Source : yesjogja.com | Yogya Executive School</p>
+                <p style="text-align: left;">MikroTik RouterOS merupakan salah satu solusi untuk membuat router internet dan intranet yang handal, tangguh serta lengkap dengan filtur-filtur selayaknya router yang sangat membantu bagi ISP, kantor dan perusahaan-perusahaan yang ingin bergabung dengan Internet.</p>
+                <p class="comment-time josefin" style="text-align: left;">Source : yesjogja.com | Yogya Executive School</p>
             <p style="text-align: right;" class="comment-time josefin">14:24 - Selasa, 6 Agustus 2024</p>
             </div>
         </div>
