--- a/mikrotik.html
+++ b/mikrotik.html
@@ -142,7 +142,7 @@
 
         <!-- content -->
 
-        <h1>Pengenalan Tentang Mikrotik dan RouterOS</h1>
+        <h1 style="text-align: center; margin-bottom: 2em;">Pengenalan Tentang Mikrotik dan RouterOS</h1>
          <!-- pengenalan mikrotik -->
         <div class="comment-box">
             <div class="comment-header">
