--- a/mikrotik.html
+++ b/mikrotik.html
@@ -163,7 +163,7 @@
             </div>
             <div class="materi-content">
                 <h1 style="text-align: left;">Apa saja kegunaan Mikrotik itu?</h1>
-                <p style="text-align: left;">1. Mikrotik dapat membantu membangun sistem administrasi jaringan yang efisien dan efektif. 
+                <p style="text-align: left;" class="mobileteks">1. Mikrotik dapat membantu membangun sistem administrasi jaringan yang efisien dan efektif. 
                     Mengatur lalu lintas data<br>
                     2. Mikrotik dapat mengatur aliran data antar perangkat yang terhubung ke jaringan. 
                     Mengelola akses konten<br>
