--- a/mikrotik.html
+++ b/mikrotik.html
@@ -142,7 +142,7 @@
 
         <!-- content -->
 
-        <h1 style="text-align: center; margin-bottom: 2em;">Pengenalan Tentang Mikrotik dan RouterOS</h1>
+        <h1 style="text-align: center; margin-bottom: 2em;" id="mobileteks">Pengenalan Tentang Mikrotik dan RouterOS</h1>
          <!-- pengenalan mikrotik -->
         <div class="comment-box">
             <div class="comment-header">
@@ -163,7 +163,7 @@
             </div>
             <div class="materi-content">
                 <h1 style="text-align: left;">Apa saja kegunaan Mikrotik itu?</h1>
-                <p style="text-align: left;" id="mobileteks">1. Mikrotik dapat membantu membangun sistem administrasi jaringan yang efisien dan efektif. 
+                <p style="text-align: left;">1. Mikrotik dapat membantu membangun sistem administrasi jaringan yang efisien dan efektif. 
                     Mengatur lalu lintas data<br>
                     2. Mikrotik dapat mengatur aliran data antar perangkat yang terhubung ke jaringan. 
                     Mengelola akses konten<br>
