set a size font size (test 6)

--- a/mikrotik.html
+++ b/mikrotik.html
@@ -142,7 +142,7 @@
 
         <!-- content -->
 
-        <h1 style="text-align: center; margin-bottom: 2em; font-size: 24px;" id="mobileteks">Pengenalan Tentang<br>Mikrotik dan RouterOS</h1>
+        <h1 style="text-align: center; margin-bottom: 2em;" id="mobileteks">Pengenalan Tentang<br>Mikrotik dan RouterOS</h1>
          <!-- pengenalan mikrotik -->
         <div class="comment-box">
             <div class="comment-header">
