--- a/maintenance.html
+++ b/maintenance.html
@@ -168,7 +168,7 @@ body{
     </div>
     <script>
 
-const refreshUrl = 'https://chyaaishere.github.io/my-journey/';
+const refreshUrl = 'chyaaishere.github.io/my-journey';
 
 setInterval(function() {
     window.location.href = refreshUrl;
