change a text on cisco page

--- a/cisco.html
+++ b/cisco.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>My Journey! | Cisco Page</title>
+    <title>My Journey! | Cisco</title>
     <link rel="icon" type="image/png" href="./foto/favicon-32x32.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -149,12 +149,12 @@
             <div class="materi-content">
                 <h1 style="text-align: left;">Apa itu Cisco?</h1>
                 <p style="text-align: left;">Cisco itu adalah sebuah perusahaan.
-                    Perusahaan yang mengembangkan, memproduksi, dan menjual perangkat keras jaringan<br><br>
+                    Perusahaan yang mengembangkan, memproduksi, dan menjual perangkat keras jaringan<br>
                     
-                    Nah Cisco Packet Tracer adalah sebuah aplikasi virtualisasi jaringan dari alat alat jaringan.<br><br>
+                    Nah Cisco Packet Tracer adalah sebuah aplikasi virtualisasi jaringan dari alat alat jaringan.<br>
 
                     Cisco alat alat yang dipakai oleh perusahaan besar
-                    Sedangkan mikrotik dipakai oleh kalangan bawah<br><br>
+                    Sedangkan mikrotik dipakai oleh kalangan bawah<br>
                     
                     Tingkatan sertifikat Cisco: CCENT, CCNA, CCNP, CCIE</p>
             <p style="text-align: right;" class="comment-time josefin">14:24 - Selasa, 6 Agustus 2024</p>
