little changes on cisco, mikrotik, sysadmin page

--- a/cisco.html
+++ b/cisco.html
@@ -149,14 +149,14 @@
             <div class="materi-content">
                 <h1 style="text-align: left;">Apa itu Cisco?</h1>
                 <p style="text-align: left;">Cisco itu adalah sebuah perusahaan.
-                    Perusahaan yang mengembangkan, memproduksi, dan menjual perangkat keras jaringan<br>
+                    Perusahaan yang mengembangkan, memproduksi, dan menjual perangkat keras jaringan<br><br>
                     
-                    Nah Cisco Packet Tracer adalah sebuah aplikasi virtualisasi jaringan dari alat alat jaringan.<br>
+                    Nah Cisco Packet Tracer adalah sebuah aplikasi virtualisasi jaringan dari alat alat jaringan.<br><br>
 
                     Cisco alat alat yang dipakai oleh perusahaan besar
-                    Sedangkan mikrotik dipakai oleh kalangan bawah<br>
+                    Sedangkan mikrotik dipakai oleh kalangan bawah<br><br>
                     
-                    Tingkatan sertifikat Cisco: CCENT, CCNA, CCNP, CCIE</p>
+                    Tingkatan sertifikat Cisco:<br><br>- CCENT, <br>-CCNA, <br>-CCNP, <br>-CCIE</p>
             <p style="text-align: right;" class="comment-time josefin">14:24 - Selasa, 6 Agustus 2024</p>
             </div>
         </div>
