--- a/mikrotik.html
+++ b/mikrotik.html
@@ -162,17 +162,17 @@
                 <div class="comment-info"></div>
             </div>
             <div class="materi-content">
-                <h1 style="text-align: left;">Apa saja kegunaan Mikrotik itu?</h1>
+                <h1 style="text-align: left;">Apa saja kegunaan Mikrotik itu?<br></h1>
                 <p style="text-align: left;">1. Mikrotik dapat membantu membangun sistem administrasi jaringan yang efisien dan efektif. 
-                    Mengatur lalu lintas data<br>
+                    Mengatur lalu lintas data<br><br>
                     2. Mikrotik dapat mengatur aliran data antar perangkat yang terhubung ke jaringan. 
-                    Mengelola akses konten<br>
+                    Mengelola akses konten<br><br>
                     3. Mikrotik dapat mengelola konten dari internet yang dapat diakses oleh client. 
-                    Memblokir situs<br>
+                    Memblokir situs<br><br>
                     4. Mikrotik dapat memblokir situs-situs yang mengandung konten terlarang, seperti pornografi, dengan menggunakan proxy. 
-                    Berperan sebagai Access Point<br>
+                    Berperan sebagai Access Point<br><br>
                     5. Mikrotik dapat berperan sebagai Access Point dalam jaringan Wi-Fi, sehingga mendukung konektivitas nirkabel di berbagai lokasi publik. 
-                    Membuat PPPoE server<br>
+                    Membuat PPPoE server<br><br>
                     6. Mikrotik dapat digunakan untuk membuat PPPoE server.<br>
                     </p>
                 <p class="comment-time josefin" style="text-align: left;">Source : Google Gemini</p>
