change a text on all page >> last fix bug?

--- a/cisco.html
+++ b/cisco.html
@@ -156,7 +156,7 @@
                     Cisco alat alat yang dipakai oleh perusahaan besar
                     Sedangkan mikrotik dipakai oleh kalangan bawah<br><br>
                     
-                    Tingkatan sertifikat Cisco:<br><br>- CCENT, <br>-CCNA, <br>-CCNP, <br>-CCIE</p>
+                    Tingkatan sertifikat Cisco: CCENT, CCNA, CCNP, CCIE</p>
             <p style="text-align: right;" class="comment-time josefin">14:24 - Selasa, 6 Agustus 2024</p>
             </div>
         </div>
