--- a/fiber-optik.html
+++ b/fiber-optik.html
@@ -141,7 +141,7 @@
         <!-- end jumbotron -->
 
 <!-- content -->
-<h1 style="text-align: center;">Kenali alat-alat yang digunakan dalam Fiber Optik</h1>
+<h1 style="text-align: center; margin-bottom: 2em;">Kenali alat-alat yang digunakan dalam Fiber Optik</h1>
 <div class="comment-box">
     <div class="comment-header">
         <div class="comment-info"></div>
