--- a/sysadmin.html
+++ b/sysadmin.html
@@ -141,7 +141,7 @@
         <!-- end jumbotron -->
 
         <!-- content -->
-        <h1 style="text-align: center;">Cara melakukan instalasi Debian 9 pada Virtualbox</h1>
+        <h1 style="text-align: center; margin-bottom: 2em;">Cara melakukan instalasi Debian 9 pada Virtualbox</h1>
         <div class="comment-box">
             <div class="comment-header">
                 <div class="comment-info"></div>
