bruh.. another typo on mikrotik.html page

--- a/mikrotik.html
+++ b/mikrotik.html
@@ -189,7 +189,7 @@
                 <h1 style="text-align: left;">Lalu, apa itu RouterOS?</h1>
                 <p style="text-align: left;">MikroTik RouterOS merupakan salah satu solusi untuk membuat router internet dan intranet yang handal, tangguh serta lengkap dengan filtur-filtur selayaknya router yang sangat membantu bagi ISP, kantor dan perusahaan-perusahaan yang ingin bergabung dengan Internet.</p>
                 <p class="comment-time josefin" style="text-align: left;">Source : yesjogja.com | Yogya Executive School</p>
-            <p style="text-align: right;" class="comment-time josefin">14:24 - Selasa, 6 Agustus 2024</p>
+            <p style="text-align: right;" class="comment-time josefin">09:23 - Sabtu, 14 September 2024</p>
             </div>
         </div>
         <!-- end content -->
