--- a/mikrotik.html
+++ b/mikrotik.html
@@ -64,8 +64,14 @@
                         <li class="nav-item">
                             <a class="nav-link nunito" aria-current="page" href="./index.html">Beranda</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link nunito" aria-current="page" href="./album.html">Albumku</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle nunito" href="#" role="button">
+                                Albumku
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="./album.html">Album</a></li>
+                                <li><a class="dropdown-item" href="#">Videos</a></li>
+                            </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link nunito" aria-current="page" href="./video.html">Videoku</a>
