create a new feature on albumdrop.html!

--- a/album.html
+++ b/album.html
@@ -79,7 +79,8 @@
                                 Albumku
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Album</a></li>
+                                <li><a class="dropdown-item" href="#">My Photos</a></li>
+                                <li><a class="dropdown-item" href="#">Random Pict</a></li>
                                 <li><a class="dropdown-item" href="#">Videos</a></li>
                             </ul>
                         </li>
