--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                                 Albumku
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./album.html">Album</a></li>
+                                <li><a class="dropdown-item" href="./album.html">My Photos</a></li>
+                                <li><a class="dropdown-item" href="#">Random Pict</a></li>
                                 <li><a class="dropdown-item" href="#">Videos</a></li>
                             </ul>
                         </li>
