--- a/materi.html
+++ b/materi.html
@@ -66,10 +66,11 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle nunito" href="#" role="button">
-                                Materi
+                                Albumku
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./album.html">Album</a></li>
+                                <li><a class="dropdown-item" href="./album.html">My Photos</a></li>
+                                <li><a class="dropdown-item" href="#">Random Pict</a></li>
                                 <li><a class="dropdown-item" href="#">Videos</a></li>
                             </ul>
                         </li>
