--- a/album.html
+++ b/album.html
@@ -75,7 +75,7 @@
                             <a class="nav-link nunito" aria-current="page" href="./index.html">Beranda</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle nunito" href="#" role="button">
+                            <a class="nav-link dropdown-toggle nunito" href="./albumdrop.html" role="button">
                                 Albumku
                             </a>
                             <ul class="dropdown-menu">
