--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <a class="nav-link nunito" aria-current="page" onclick="scrollToAbout()">Tentangku</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle nunito" href="#" role="button">
+                            <a class="nav-link dropdown-toggle nunito" href="./albumdrop.html" role="button">
                                 Albumku
                             </a>
                             <ul class="dropdown-menu">
